[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.4", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.89"
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}
log = "0.4"
# gloo-net = { version = "0.2.6", features = ["http"] }
reqwest = { version = "*", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
chrono = { version = "*", features = ["serde"] }
eyre = { version = "*"}
enum-iterator = "1.4.1"
futures = "*"
web-sys = { version = "*", features = ["Element", "DomRect"] }